--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^2.20.3",
     "cross-spawn": "^7.0.3",
     "cssesc": "^3.0.0",
+    "date-fns": "^2.29.3",
     "electron-to-chromium": "^1.4.341",
     "enhanced-resolve": "^5.12.0",
     "envinfo": "^7.8.1",
