--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
-    "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
   },
   "name": "todo-list",
   "description": "Functionality so far: None",
@@ -17,16 +20,16 @@
     "ajv-keywords": "^3.5.2",
     "browserslist": "^4.21.5",
     "buffer-from": "^1.1.2",
-    "caniuse-lite": "^1.0.30001470",
+    "caniuse-lite": "^1.0.30001481",
     "chrome-trace-event": "^1.0.3",
     "clone-deep": "^4.0.1",
-    "colorette": "^2.0.19",
+    "colorette": "^2.0.20",
     "commander": "^2.20.3",
     "cross-spawn": "^7.0.3",
     "cssesc": "^3.0.0",
-    "date-fns": "^2.29.3",
-    "electron-to-chromium": "^1.4.341",
-    "enhanced-resolve": "^5.12.0",
+    "date-fns": "^2.30.0",
+    "electron-to-chromium": "^1.4.377",
+    "enhanced-resolve": "^5.13.0",
     "envinfo": "^7.8.1",
     "es-module-lexer": "^0.9.3",
     "escalade": "^3.1.1",
@@ -46,7 +49,7 @@
     "icss-utils": "^5.1.0",
     "import-local": "^3.1.0",
     "interpret": "^3.1.1",
-    "is-core-module": "^2.11.0",
+    "is-core-module": "^2.12.0",
     "is-plain-object": "^2.0.4",
     "isexe": "^2.0.0",
     "isobject": "^3.0.1",
@@ -71,22 +74,22 @@
     "path-parse": "^1.0.7",
     "picocolors": "^1.0.0",
     "pkg-dir": "^4.2.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "postcss-modules-extract-imports": "^3.0.0",
     "postcss-modules-local-by-default": "^4.0.0",
     "postcss-modules-scope": "^3.0.0",
     "postcss-modules-values": "^4.0.0",
-    "postcss-selector-parser": "^6.0.11",
+    "postcss-selector-parser": "^6.0.12",
     "postcss-value-parser": "^4.2.0",
     "punycode": "^2.3.0",
     "randombytes": "^2.1.0",
     "rechoir": "^0.8.0",
-    "resolve": "^1.22.1",
+    "resolve": "^1.22.2",
     "resolve-cwd": "^3.0.0",
     "resolve-from": "^5.0.0",
     "safe-buffer": "^5.2.1",
-    "schema-utils": "^3.1.1",
-    "semver": "^7.3.8",
+    "schema-utils": "^3.1.2",
+    "semver": "^7.5.0",
     "serialize-javascript": "^6.0.1",
     "shallow-clone": "^3.0.1",
     "shebang-command": "^2.0.0",
@@ -97,16 +100,16 @@
     "supports-color": "^8.1.1",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "tapable": "^2.2.1",
-    "terser": "^5.16.8",
+    "terser": "^5.17.1",
     "terser-webpack-plugin": "^5.3.7",
-    "update-browserslist-db": "^1.0.10",
+    "update-browserslist-db": "^1.0.11",
     "uri-js": "^4.4.1",
     "util-deprecate": "^1.0.2",
     "watchpack": "^2.4.0",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3",
     "which": "^2.0.2",
-    "wildcard": "^2.0.0",
+    "wildcard": "^2.0.1",
     "yallist": "^4.0.0"
   },
   "scripts": {
