--- a/app/package.json
+++ b/app/package.json
@@ -14,12 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "@tanstack/react-router": "^1.19.2",
-    "@tanstack/router-devtools": "^1.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.19.2",
     "@tanstack/router-vite-plugin": "^1.19.3",
+    "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
